--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     btn.addEventListener('click', (e) => {
       e.preventDefault();
-      message.innerHTML = "May Allah fill our days with light, unity, and baraka 🤲✨";
+      message.innerHTML = "sff xbaghya 3ad , lah ywf9k jmm laah w ww w w w amnn 🤍🤲✨";
       btn.textContent = "Ameen 🤍";
     });
 
@@ -155,4 +155,5 @@
   </script>
 </body>
 </html>
+
 
